Write the html file for the basic UI

--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>Rock-paper-scissors game</title>
 </head>
 <body>
+    <header>
+        <h1>Kő-Papír-Olló Ultimate</h1>
+        <h2>A játék 5 győzelemig tart</h2>
+        <h3>Válassz fegyvert</h3>
+    </header>
+    <main>
+        <div id="weapons-container">
+            <button class="weapon" id="rock">Kő</button>
+            <button class="weapon" id="paper">Papír</button>
+            <button class="weapon" id="scissor">Olló</button>
+        </div>
+        <div id="scores-container">
+            <div id="player-score">
+                <p>Játékos:</p>
+            </div>
+            <div id="computer-score">
+                <p>Computer:</p>
+            </div>
+        </div>
+        <div class="results-container">
+            <h3></h3>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
