--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-paper-scissors game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src="script.js"></script>
+    <header>
+        <h1>Kő-Papír-Olló Ultimate</h1>
+        <h2>A játék 5 győzelemig tart</h2>
+        <h3>Válassz fegyvert</h3>
+    </header>
+    <main>
+        <div id="weapons-container">
+            <button class="weapon" id="rock">Kő</button>
+            <button class="weapon" id="paper">Papír</button>
+            <button class="weapon" id="scissor">Olló</button>
+        </div>
+        <div id="scores-container">
+            <div id="player-score">
+                <p>Játékos:</p>
+            </div>
+            <div id="computer-score">
+                <p>Computer:</p>
+            </div>
+        </div>
+        <div id="result-container">
+            <h3>Győztél!</h3>
+        </div>
+    </main>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
