--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-paper-scissors game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -25,10 +26,10 @@
                 <p>Computer:</p>
             </div>
         </div>
-        <div class="results-container">
-            <h3></h3>
+        <div id="result-container">
+            <h3>sdsd</h3>
         </div>
     </main>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
