moved 'játékos' and 'computer' texts outside the result box

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         </div>
         <div id="scores-container">
             <div id="player-score">
-                <p>Játékos:</p>
+                <p>Játékos</p>
+                <div></div>
             </div>
             <div id="computer-score">
-                <p>Computer:</p>
+                <p>Computer</p>
+                <div></div>
             </div>
         </div>
         <div id="result-container">
