--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
             <h3>sdsd</h3>
         </div>
     </main>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 </body>
 </html>
