--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
             <button class="weapon" id="scissor">Olló</button>
         </div>
         <div id="scores-container">
-            <div id="player-score">
+            <div id="player-score-box">
                 <p>Játékos</p>
-                <div></div>
+                <div>
+                    <p id="player-score">5</p>
+                </div>
             </div>
-            <div id="computer-score">
+            <div id="computer-score-box">
                 <p>Computer</p>
-                <div></div>
+                <div>
+                    <p id="computer-score">3</p>
+                </div>
             </div>
         </div>
         <div id="result-container">
-            <h3>sdsd</h3>
+            <h3>You win</h3>
         </div>
     </main>
     <script src="script.js"></script>
