added a new feature to highlight the result of the round

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <button class="weapon" id="paper">Papír</button>
             <button class="weapon" id="scissor">Olló</button>
         </div>
+        <div id="recent-score">
+            <p></p>
+        </div>
         <div id="scores-container">
             <div id="player-score-box">
                 <p>Játékos</p>
