add a reset-game feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Kő-Papír-Olló Ultimate</h1>
+        <h1>Kő-Papír-Olló</h1>
         <h2>A játék 5 győzelemig tart</h2>
         <h3>Válassz fegyvert</h3>
     </header>
@@ -38,6 +38,9 @@
         <div id="result-container">
             <h1></h1>
         </div>
+        <div id="reset">
+            <button>Új kör?</button>
+        </dvi>
     </main>
     <script src="script.js"></script>
 </body>
