make the game show images according to what is picked

--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
         </div>
         <div id="scores-container">
             <div id="player-score-box">
-                <p>Játékos</p>
-                <div>
-                    <p id="player-score">5</p>
+                <p id="player-score"></p>
+                <div id="playerimage-container">
+                    
+                    <img id="player-image">
                 </div>
             </div>
             <div id="computer-score-box">
-                <p>Computer</p>
-                <div>
-                    <p id="computer-score">3</p>
+                <p id="computer-score"><span id="comp-scorespan"></span></p>
+                <div class="computerimage-container">
+                    
+                    <img id="computer-image">
                 </div>
             </div>
         </div>
@@ -39,7 +41,7 @@
             <h1></h1>
         </div>
         <div id="reset">
-            <button>Új kör?</button>
+            <button>Újra? Nemmered!</button>
         </dvi>
     </main>
     <script src="script.js"></script>
