resetbutton bugfix (clear images when reset), and styling mods

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Kő-Papír-Olló</h1>
+        <h1>Kő - Papír - Olló</h1>
+        <hr>
         <h2>A játék 5 győzelemig tart</h2>
+        <hr>
         <h3>Válassz fegyvert</h3>
     </header>
     <main>
@@ -24,14 +26,14 @@
         <div id="scores-container">
             <div id="player-score-box">
                 <p id="player-score"></p>
-                <div id="playerimage-container">
+                <div class="image-container">
                     
                     <img id="player-image">
                 </div>
             </div>
             <div id="computer-score-box">
                 <p id="computer-score"><span id="comp-scorespan"></span></p>
-                <div class="computerimage-container">
+                <div class="image-container">
                     
                     <img id="computer-image">
                 </div>
