--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div id="computer-score-box">
-                <p id="computer-score"><span id="comp-scorespan"></span></p>
+                <p id="computer-score"></p>
                 <div class="image-container">
                     
                     <img id="computer-image">
